Upgrade project to Java 21 with modern language features
- Updated Maven compiler plugin from 3.8.1 to 3.11.0
- Changed Java release from 11 to 21
- Modernized switch statement in setPolicyId() to use switch expressions
- Replaced string concatenations with text blocks for better readability
- Used String.formatted() instead of String.format() and concatenation
- Implemented pattern matching in extractUserId() method
- Added pattern matching with instanceof in headersAndResponseSummaryTable()
- Improved code readability and maintainability using Java 21 features

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>